@@ -243,6 +243,156 @@ Affiliation: None.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00007.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00007.html</a>
 </P>
 
+<P>12. JEFF WAUGH<br />
+&quot;
+I am passionate about GNOME and Free Software, and have committed a large
+amount of my time and energy to helping our exceptional hackers do their
+magic. This year my primary contribution to GNOME was leadership of the
+Release Team to help our hackers pull off the amazing GNOME 2.0 release.
+I will work to build upon GNOME's contributor base, maintain our casual,
+personal community, ensure a transparently operated Foundation, and to
+promote our project and achievements aggressively.
+&quot;<br />
+Affiliation: None.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00008.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00008.html</a>
+</P>
+
+<P>13. LESLIE PROCTOR<br />
+&quot;
+I'd like to more closely tie GNOME marketing
+with the Foundation Board, and being part of the board
+will be a good way to accomplish that goal.
+&quot;<br />
+Affiliation: GNOME Foundation.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00010.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00010.html</a>
+</P>
+
+<P>14. NAT FRIEDMAN<br />
+&quot;
+&quot;<br />
+Affiliation: Ximian.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00011.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00011.html</a>
+</P>
+
+<P>15. JONATHAN BLANDFORD<br />
+&quot;
+&quot;<br />
+Affiliation: Red Hat.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00013.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00013.html</a>
+</P>
+
+<P>16. JODY GOLDBERG<br />
+&quot;
+Who :<br />
+&nbsp;&nbsp;- Jody Goldberg<br />
+&nbsp;&nbsp;- Affiliation Ximian<br />
+&nbsp;&nbsp;- Maintainer of Gnumeric and Control-Centre<br />
+&nbsp;&nbsp;- Current board member<br />
+&nbsp;&nbsp;- Member of Release Team<br />
+What :<br />
+&nbsp;&nbsp;- Advocate for GNOME Office<br />
+&nbsp;&nbsp;- Apply lessons learned in developing a large application with
+  GNOME toward finding common areas with other projects.
+&quot;<br />
+Affiliation: Ximian.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00014.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00014.html</a>
+</P>
+
+<P>17. TIM NEY<br />
+&quot;
+GNOME Foundation needs the combined efforts of hackers and non-hackers.
+Since I first worked with GNOME four years ago, getting machines and
+setting up booths and presentations, the developer community and user
+base has grown tremendously.  
+<br />
+My contribution is to build bridges and obtain resources needed for
+GNOME to successfully continue its growth. Working with the GNOME
+community is a great experience and I'd like to continue pushing for
+more adoption by governments and schools.
+&quot;<br />
+Affiliation: GNOME Foundation.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00015.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00015.html</a>
+</P>
+
+<P>18. LUIS VILLA<br />
+&quot;
+I want to get involved with the board for three reasons. First, to
+improve communications between the board and /all/ volunteers,
+including, but not just, hackers. Second, to increase the board's
+activity level in areas where the board is GNOME's most effective organ,
+like marketing, infrastructure, and fundraising. Finally, to ensure that
+the board does not interfere with more direct community leadership in
+areas where that leadership is already providing effective guidance.
+&quot;<br />
+Affiliation: Ximian.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00017.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00017.html</a>
+</P>
+
+<P>19. AMY KAHN<br />
+&quot;
+I, Amy Kahn, am running for election for the Gnome Foundation Board on the 
+following platform:
+<br />
+I intend to establish better and more accessible usability standards in 
+for the future of the GNOME desktop and related applications. I plan to do 
+this by using my experience and expertise in the usability field, 
+researching the way users do their jobs and providing that data to the 
+hacker community, providing a forum for usability gurus and hackers to 
+communicate, and helping said persons to organize themselves so a real 
+review process can happen.
+&quot;<br />
+Affiliation: GNOME Foundation.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00018.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00018.html</a>
+</P>
+
+<P>20. MARTIN BAULIG<br />
+&quot;
+I've been hacking on GNOME almost since its early beginnings.  However,
+about a year ago I took a longer break to concentrate more on
+university.
+<br />
+This spring, I became a Mono hacker and since then, I've been hacking on
+the compiler and the new Mono Debugger.
+<br />
+As an European guy and Mono hacker, my main focus is helping GNOME
+moving forward in Europe and integrating GNOME and Mono nicely so that
+people can quickly and easily design their coolest GNOME apps with Mono.
+&quot;<br />
+Affiliation: Ximian.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00019.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00019.html</a>
+</P>
+
+<P>21. SRI RAMKRISHNA<br />
+&quot;
+I'm running for the GNOME Foundation board in order to help GNOME and 
+in the process better myself own helps by making GNOME problems, my 
+problems.  While I'm not a serious coder I can code; I think my talents 
+really lie in facilitating and attacking problems from a high level.  I 
+would like to help the GNOME project grow further by encouraging the 
+use of GEP, help get documentation complete, and establish more desktop 
+standards.  I've had experience in leading a diverse engineering team, 
+worked on projects that spanned many physical locations, and had some 
+management experience.  All of which requires critical thinking and 
+planning.  Thanks.
+&quot;<br />
+Affiliation: None.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00020.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00020.html</a>
+</P>
+
+<P>22. FEDERICO MENA QUINTERO<br />
+&quot;
+We lack complete developer's documentation for our 2.0 platform.  The
+documentation I have written in the past has been useful to people, so I
+want to work with the different developers of GNOME libraries to ensure
+that their code has proper documentation.  Also, I want to help in
+coordination between the GNOME and OpenOffice.org teams --- OO.o needs
+to integrate well into the GNOME environment, and they may also be able
+to use some of our cool technologies to avoid duplicated work.
+&quot;<br />
+Affiliation: Ximian.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00021.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00021.html</a>
+</P>
+
 <center>
 <P>
 <BR><BR>
